# baiatool_fw

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  Kconfig.button  Kconfig.display  Kconfig.endpoints  Kconfig.id_manager  Kconfig.led  Kconfig.rfid  Kconfig.schedule  Kconfig.settings  Kconfig.sntp  Kconfig.storage  Kconfig.wifi  README.md  app.overlay  prj.conf  requirements.txt  west.yml
.claude/commands/: zephyr-style.md
boards/: esp32_devkitc_procpu.overlay  esp32c6_devkitc_hpcore.conf  esp32c6_devkitc_hpcore.overlay
dts/bindings/spi/: nxp,mfrc522.yaml
includes/assets/: logo_baiatool.h
includes/components/: settings.h  storage.h
includes/drivers/: esp32_wps.h  mfrc522.h
includes/drivers/mfrc522/: mfrc522_chan.h
includes/endpoints/: checkout.h  confirm_schedule.h  diagnostic.h  http_request.h  schedule.h
includes/services/: display.h  led.h  rfid.h  schedule.h  sntp.h  wifi.h
includes/services/rfid/: rfid.h
scripts/: setup.sh
scripts/UI/: app.py
scripts/UI/static/: style.css
scripts/UI/templates/: index.html
src/: main.c
src/action/: button.c
src/assets/: logo_baiatool.c
src/components/: settings.c  storage.c
src/drivers/: esp32_wps.c
src/drivers/mfrc522/: mfrc522.c
src/endpoints/: checkout.c  confirm_schedule.c  diagnostic.c  http_shell.c  schedule.c
src/services/: display.c  id_manager.c  led.c  rfid.c  schedule.c  sntp.c  wifi.c
src/services/rfid/: rfid.c
src/shell/: display_shell.c  endpoint_shell.c  http_shell.c  led_shell.c  settings_shell.c  storage_shell.c  wifi_shell.c
tests/integration/: integration.cmake
tests/integration/settings/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/integration/settings/src/: main.c
tests/unit/: unit.cmake
tests/unit/schedule/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/unit/schedule/src/: main.c
tests/unit/sntp/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/unit/sntp/src/: main.c  stubs.c
tests/unit/storage/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/unit/storage/src/: main.c
